--- a/style_angela.css
+++ b/style_angela.css
@@ -117,7 +117,7 @@ hr {
 }
 
 .top {
-  background-color:#abddd6;
+  background-color:#82d1c6;
   /* previous dull color :#abddd6 #9dd2cb */
   height: 800px;
   margin-bottom: 50px;
